# claude-codex-multi-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.compliance  Dockerfile.production  README.md  __init__.py  docker-compose.prod.yml  docker-compose.yml  docker_entrypoint.py  gen_doc.py  nginx.conf  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  runtime_hook.py
.github/workflows/: ci.yml  docker-release.yml  docker.yml  release.yml
agents/: __init__.py  pipeline.py  pipeline_phase1.py  pipeline_phase2.py
agents/experts/: __init__.py  agent.py
agents/runtime/: loop.py  orchestrator.py
agents/supervisor/: __init__.py  agent_executor.py  code_generation.py  phase1.py  router.py  types.py
config/: agents.yaml  pipeline.yaml
config/schemas/: api_integration_input.json  api_integration_output.json  auth_input.json  auth_output.json  authentication_input.json  authentication_output.json  cart_input.json  cart_output.json  data_processing_input.json  data_processing_output.json  notification_input.json  notification_output.json  order_input.json  order_output.json  payment_input.json  payment_output.json  product_input.json  product_output.json  report_input.json  report_output.json
desktop/: build.spec  main.py
docker/nginx/: nginx.conf  ssl.conf
docs/: ARCHITECTURE-REVIEW.md  DEPLOYMENT.md  PATH_A_ROADMAP.md  PIPELINE_CONFIG.md  PROJECT_DEPLOYMENT-TUTORIAL.md  QUICK_START.md  RAG_CONFIG.md  RELEASE_BUILD_SPEC.md  SCHEMA_GUIDE.md  SECURITY.md  SKILL_AUTHORING.md  SUMMARY.md  agent-design.md  architecture.md  deep-design-spec.md  deployment-guide.md  design-vs-implementation.md  metrics.md  protocols.md  usability-assessment.md
examples/: demo_showcase.py  ecommerce_trace.py
frontend/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  style.css
gui/: __init__.py  state.py
gui/pages/: __init__.py  eval.py  query.py  search.py  skills.py  status.py  workflow.py
scripts/: build_pyinstaller.sh  generate_api_key.py  scaffold.py  security_audit.py
server/: __init__.py  app.py
server/routes/: __init__.py  mcp.py  rag.py  workflow.py
tests/: test_cc_init.py  test_cc_pipeline.py  test_cc_switch.py  test_demo_showcase.py  test_resilience.py  test_schema_validator.py
tests/cli/: test_cc_cli.py
tests/compiler/: __init__.py  test_compile_incremental.py  test_context_deriver.py  test_dependency_graph.py  test_fix_deriver.py
tests/eval/: test_ab_test.py  test_assertions.py  test_eval_isolation.py
tests/guardrails/: test_guards.py
tests/hitl/: test_approval.py  test_audit_pii.py
tests/integration/: test_anthropic_provider.py  test_code_writer.py  test_dependency_injection.py  test_e2e_pipeline.py  test_edge_cases.py  test_full_pipeline.py  test_mcp_server.py  test_phase2_real_review.py  test_pipeline_compiler.py  test_pipeline_integration.py  test_real_llm_code_gen.py  test_store_persistence.py  test_system_integration.py
tests/memory/: test_long_term.py  test_short_term.py
tests/observability/: test_alert_manager.py  test_observability.py  test_tracer_context.py
tools/: __init__.py  cc_cli.py  cc_init.py  exceptions.py  resilience.py  schema_validator.py
(+177 files in other folders)
