[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-codex-multi-agent"
version = "0.4.0.dev0"
description = "Schema-First Multi-Agent Development Pipeline with RAG dual-engine, skill self-learning, and GRPO optimization"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "CC Contributors", email = "cc@example.com"},
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Code Generators",
    "Natural Language :: English",
]
keywords = [
    "multi-agent", "pipeline", "rag", "grpo", "llm",
    "code-generation", "schema-first", "skill-learning",
    "fastapi", "streamlit",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "sse-starlette>=1.8.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.25.0"]
openai = ["openai>=1.0"]
gemini = ["google-generativeai>=0.5.0"]
gui = ["streamlit>=1.28.0"]
milvus = ["pymilvus>=2.3.0"]
chroma = ["chromadb>=0.4.0"]
dev = [
    "ruff>=0.4.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

[project.scripts]
cc = "tools.cc_cli:main"
ccm = "tools.cc_cli:main"

[project.entry-points."cc.plugins.providers"]
anthropic = "tools.llm.anthropic:AnthropicClaudeProvider"
openai_compatible = "tools.llm.providers:OpenAICompatibleProvider"
gemini = "tools.llm.providers:GeminiProvider"

[tool.setuptools]
py-modules = ["__init__"]

[tool.setuptools.packages.find]
include = ["tools*", "agents*", "gui*"]

[tool.setuptools.package-data]
"*" = ["config/**/*.json", "config/**/*.yaml", "plugins/skills/*/skill.json", "plugins/tools/*/tool.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Project root dir has hyphens in name — N999 is unavoidable for all packages here
"**/__init__.py" = ["N999"]
"**/__main__.py" = ["N999"]
# Deferred imports below class/function definitions (intentional for circular-import avoidance)
"tools/hitl/approval.py" = ["E402"]
"tools/server/app.py" = ["E402"]
"tools/workflow/engine.py" = ["E402"]
"tools/workflow/execution.py" = ["E402"]
# Test files: E402 deferred imports, N801 Gap-numbered class names are intentional
"tests/hitl/test_approval.py" = ["E402"]
"tests/langgraph_adapter/test_graph_builder.py" = ["E402"]
"tests/observability/test_observability.py" = ["N801"]
"tests/security/test_cicd_docs.py" = ["N801"]
"tests/security/test_docker_hardening.py" = ["N801"]
"tests/security/test_threat_model.py" = ["N801"]
